included manubulon  for SNMP checks

--- a/templates/icinga2.conf.erb
+++ b/templates/icinga2.conf.erb
@@ -41,6 +41,9 @@ include "zones.conf"
 include <itl>
 include <plugins>
 
+## For SNMP checks
+include <manubulon>
+
 /**
  * The features-available directory contains a number of configuration
  * files for features which can be enabled and disabled using the
